--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,8 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <div class="main-header__logo logo logo--top">
-        <a class="logo__icon" href="#">
+      <div class="main-header__logo">
+        <a class="main-header__link logo" href="#">
           <picture>
           <img class="logo__image" src="./img/logo-mobile.svg" width="34" height="38" alt="Иконка логотипа">
           </picture>
@@ -19,15 +19,14 @@
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-nav__wrapper">
           <ul class="main-nav__list nav-list">
             <li class="nav-list__item nav-list__item--active">
-              <a class="nav-list__link nav-list__link--color" href="#">
+              <a class="nav-list__link nav-list__link--color" href="index.html">
               Главная
               </a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link nav-list__link--color" href="#">
+              <a class="nav-list__link nav-list__link--color" href="catalog.html">
               Каталог продукции
               </a>
             </li>
@@ -37,15 +36,19 @@
               </a>
             </li>
           </ul>
-        </div>
+
       </nav>
     </header>
-    <main class="main-container">
+    <main class="page__main">
       <h1 class="visually-hidden">Cat Energy - фукциональное питание для котов</h1>
       <section class="hero">
-        <div class="hero__wrapper">
+        <div class="hero__wrapper-top">
+          <div class="hero__container">
           <h2 class="hero__title">Функциональное питание для котов</h2>
           <p class="hero__descr">Занялся собой? Займись котом!</p>
+        </div>
+        </div>
+        <div class="hero__wrapper-bottom">
           <a class="hero__button button" href="#">Подобрать программу</a>
         </div>
       </section>
