делает на препроцессорах main

--- a/source/index.html
+++ b/source/index.html
@@ -85,35 +85,33 @@
             </li>
           </ul>
         </div>
-      </section>
+        </section>
       <section class="example">
         <div class="example__wrapper">
           <h2 class="example__title second-title">Живой пример</h2>
-          <p class="example__descr card-descr">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+          <div class="example__container">
+          <p class="example__explane card-descr">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
           <dl class="example__list">
-            <div class="example__item">
               <dt class="example__term">5 кг</dt>
-              <dd class="example__descr">снижение веса</dd>
-            </div>
-            <div class="example__item">
+              <dd class="example__descr">снижение<br>веса</dd>
               <dt class="example__term">60 дней</dt>
-              <dd class="example__descr">затрачено времени</dd>
-            </div>
+              <dd class="example__descr">затрачено<br>времени</dd>
           </dl>
-          <span class="example__span card-title card-title--line">Затраты на питание: 15 000 РУБ.</span>
+          <span class="example__span">Затраты на питание: 15 000 РУБ.</span>
           <div class="example__container slider">
             <ul class="slider__list">
               <li class="slider__item">
-                <img src="./img/fat-cat.png" width="280" height="256" alt="Фото толстого кота">
+                <img class="slider__image" src="./img/fat-cat.png" width="280" height="256" alt="Фото толстого кота">
               </li>
               <li class="slider__item">
-                <img src="./img/thin-cat.png" width="280" height="256" alt="Фото худого кота">
+                <img class="slider__image" src="./img/thin-cat.png" width="280" height="256" alt="Фото худого кота">
               </li>
             </ul>
             <div class="slider__curtain">
               <button class="slider__button" type="button">
                 <span class="visually-hidden">Шторка для переключения изображения котов</span>
               </button>
+            </div>
             </div>
           </div>
         </div>
@@ -123,12 +121,12 @@
       <div class="main-footer__wrapper">
         <section class="invite">
           <div class="invite__wrapper">
-            <h2 class="invite__title card-title">Приглашаем к сотрудничеству дилеров!</h2>
+            <h2 class="invite__title">Приглашаем к сотрудничеству дилеров!</h2>
             <address class="invite__address card-descr">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
-          <a class="invite__link" href="#">
-            <img src="./img/location.jpg" width="320" height="362" alt="Местоположение на карте">
-          </a>
+             <a class="invite__link" href="#">
+            <img class="invite__image" src="./img/location.jpg" min-width="320" height="362" alt="Местоположение на карте">
+             </a>
         </section>
         <div class="main-footer__logo logo logo--bottom">
           <a class="logo__subscribe" href="#"><img src="./img/logo-subscribe.svg" width="128" height="24" alt="Название логотипа"></a>
