--- a/source/index.html
+++ b/source/index.html
@@ -118,7 +118,6 @@
       </section>
       </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper">
         <section class="invite">
           <div class="invite__wrapper">
             <h2 class="invite__title">Приглашаем к сотрудничеству дилеров!</h2>
@@ -128,9 +127,11 @@
             <img class="invite__image" src="./img/location.jpg" min-width="320" height="362" alt="Местоположение на карте">
              </a>
         </section>
-        <div class="main-footer__logo logo logo--bottom">
+        <div class="main-footer__wrapper">
+        <div class="main-footer__logo logo">
           <a class="logo__subscribe" href="#"><img src="./img/logo-subscribe.svg" width="128" height="24" alt="Название логотипа"></a>
         </div>
+        <div class="main-footer__container">
         <ul class="main-footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#">
@@ -148,6 +149,7 @@
             </a>
           </li>
         </ul>
+      </div>
         <div class="main-footer__copyright">
           <a class="main-footer__copyright-descr" href="#">
             <img src="./img/footer-descr.svg" width="113" height="19"  alt="Копирайт подпись">
