--- a/source/index.html
+++ b/source/index.html
@@ -15,23 +15,23 @@
           </picture>
         </a>
       </div>
-      <nav class="main-nav">
+      <nav class="main-header__nav main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
           <ul class="main-nav__list nav-list">
-            <li class="nav-list__item nav-list__item--active">
+            <li class="nav-list__item">
               <a class="nav-list__link nav-list__link--color" href="index.html">
               Главная
               </a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link nav-list__link--color" href="catalog.html">
+              <a class="nav-list__link" href="catalog.html">
               Каталог продукции
               </a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link nav-list__link--color" href="#">
+              <a class="nav-list__link" href="#">
               Подбор программы
               </a>
             </li>
@@ -93,12 +93,16 @@
           <p class="example__explane card-descr">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
           <dl class="example__list">
               <dt class="example__term">5 кг</dt>
-              <dd class="example__descr">снижение<br>веса</dd>
+              <dd class="example__descr">
+                <span class="example__line">снижение веса</span>
+              </dd>
               <dt class="example__term">60 дней</dt>
-              <dd class="example__descr">затрачено<br>времени</dd>
+              <dd class="example__descr">
+                <span class="example__line">затрачено времени</span>
+              </dd>
           </dl>
           <span class="example__span">Затраты на питание: 15 000 РУБ.</span>
-          <div class="example__container slider">
+          <div class="example__contain slider">
             <ul class="slider__list">
               <li class="slider__item">
                 <img class="slider__image" src="./img/fat-cat.png" width="280" height="256" alt="Фото толстого кота">
