делает адаптивные сетки главной страницы для планшета

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,6 @@
               </a>
             </li>
           </ul>
-
       </nav>
     </header>
     <main class="page__main">
@@ -48,9 +47,7 @@
           <p class="hero__descr">Занялся собой? Займись котом!</p>
         </div>
         </div>
-        <div class="hero__wrapper-bottom">
           <a class="hero__button button" href="#">Подобрать программу</a>
-        </div>
       </section>
       <section class="programs">
         <h2 class="visually-hidden">Программы питания</h2>
@@ -75,7 +72,7 @@
               <p class="it-works__descr card-descr">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="it-works__item it-works__item--liquid">
-              <p class="it-works__descr card-descr">Выпускается в виде порошка,который нужно лишь залить кипятком и готово.</p>
+              <p class="it-works__descr card-descr">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="it-works__item it-works__item--tableware">
               <p class="it-works__descr card-descr">Замените один-два приема обычной еды на наше функциональное питание.</p>
@@ -124,7 +121,7 @@
     <footer class="main-footer">
         <section class="invite">
           <div class="invite__wrapper">
-            <h2 class="invite__title">Приглашаем к сотрудничеству дилеров!</h2>
+            <h2 class="invite__title">Приглашаем<br>к сотрудничеству дилеров!</h2>
             <address class="invite__address card-descr">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
              <a class="invite__link" href="#">
