--- a/source/form.html
+++ b/source/form.html
@@ -26,17 +26,17 @@
         </button>
           <ul class="main-nav__list nav-list nav-form">
               <li class="nav-list__item nav-form__item">
-              <a class="nav-list__link nav-list__link--color" href="index.html">
+              <a class="nav-list__link nav-list__link--not-index" href="index.html">
               Главная
               </a>
             </li>
             <li class="nav-list__item nav-form__item">
-              <a class="nav-list__link" href="catalog.html">
+              <a class="nav-list__link nav-list__link--not-index" href="catalog.html">
               Каталог продукции
               </a>
             </li>
             <li class="nav-list__item nav-form__item">
-              <a class="nav-list__link" href="form.html">
+              <a class="nav-list__link nav-list__link--not-index nav-list__link--color" href="form.html">
               Подбор программы
               </a>
             </li>
