--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
         </button>
           <ul class="main-nav__list nav-list">
               <li class="nav-list__item">
-              <a class="nav-list__link nav-list__link--color" href="index.html">
+              <a class="nav-list__link nav-list__link--color nav-list__link--color-index" href="index.html">
               Главная
               </a>
             </li>
