--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,8 +48,12 @@
         <ul class="product__list">
           <li class="product__item card">
             <div class="card__image-block">
-            <img class="card__image" src="#" alt="Фото товара">
-            </div>
+          <picture>
+            <source media="(min-width: 768px)" srcset="./img/catalog/chicken-500-tablet.png 1x, ./img/catalog/chicken-500-tablet@2x.png 2x">
+            <img class="card__image" src="./img/catalog/chicken-500.png" srcset="./img/catalog/chicken-500@2x.png 2x" alt="Cat Energy PRO 500 г">
+          </picture>
+          </div>
+          <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy PRO 500 г</a>
             <dl class="card__list">
               <div class="card__line">
@@ -65,202 +69,254 @@
               <dd class="card__term product-descr">700 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
           <li class="product__item card">
-            <img class="card__image" src="#" alt="Фото товара">
+            <div class="card__image-block">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./img/catalog/chicken-1000-tablet.png 1x, ./img/catalog/chicken-1000-tablet@2x.png 2x">
+              <img class="card__image" src="./img/catalog/chicken-1000.png" srcset="./img/catalog/chicken-1000@2x.png 2x" alt="Cat Energy PRO 1000 г">
+            </picture>
+          </div>
+          <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy PRO 1000 г</a>
             <dl class="card__list">
               <div class="card__line">
               <dt class="card__term product-descr">Масса</dt>
-              <dd class="card__descr product-descr">1000 г</dd>
+              <dd class="card__term product-descr">1000 г</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Вкус</dt>
-              <dd class="card__descr product-descr">Курица</dd>
+              <dd class="card__term product-descr">Курица</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Цена</dt>
-              <dd class="card__descr product-descr">1000 ₽</dd>
+              <dd class="card__term product-descr">1000 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
           <li class="product__item card">
-            <img class="card__image" src="#" alt="Фото товара">
+            <div class="card__image-block">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/fish-500-tablet.png 1x, ./img/catalog/fish-500-tablet@2x.png 2x">
+                <img class="card__image" src="./img/catalog/fish-500.png" srcset="./img/catalog/fish-500@2x.png 2x" alt="Cat Energy PRO 500 г">
+              </picture>
+            </div>
+            <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy PRO 500 г</a>
             <dl class="card__list">
               <div class="card__line">
               <dt class="card__term product-descr">Масса</dt>
-              <dd class="card__descr product-descr">500 г</dd>
+              <dd class="card__term product-descr">500 г</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Вкус</dt>
-              <dd class="card__descr product-descr">Рыба</dd>
+              <dd class="card__term product-descr">Рыба</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Цена</dt>
-              <dd class="card__descr product-descr">500 ₽</dd>
+              <dd class="card__term product-descr">500 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
           <li class="product__item card">
-            <img class="card__image" src="#" alt="Фото товара">
+            <div class="card__image-block">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/fish-1000-tablet.png 1x, ./img/catalog/fish-1000-tablet@2x.png 2x">
+                <img class="card__image" src="./img/catalog/fish-1000.png" srcset="./img/catalog/fish-1000@2x.png 2x" alt="Cat Energy PRO 1000 г">
+              </picture>
+            </div>
+            <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy PRO 1000 г</a>
             <dl class="card__list">
               <div class="card__line">
               <dt class="card__term product-descr">Масса</dt>
-              <dd class="card__descr product-descr">1000 г</dd>
+              <dd class="card__term product-descr">1000 г</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Вкус</dt>
-              <dd class="card__descr product-descr">Рыба</dd>
+              <dd class="card__term product-descr">Рыба</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Цена</dt>
-              <dd class="card__descr product-descr">1000 ₽</dd>
+              <dd class="card__term product-descr">1000 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
           <li class="product__item card">
-            <img class="card__image" src="#" alt="Фото товара">
+            <div class="card__image-block">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/buckwheat-500-tablet.png 1x, ./img/catalog/buckwheat-500-tablet@2x.png 2x">
+                <img class="card__image" src="./img/catalog/buckwheat-500.png" srcset="./img/catalog/buckwheat-500@2x.png 2x" alt="Cat Energy SLIM 500 г">
+              </picture>
+            </div>
+            <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy SLIM 500 г</a>
             <dl class="card__list">
               <div class="card__line">
               <dt class="card__term product-descr">Масса</dt>
-              <dd class="card__descr product-descr">500 г</dd>
+              <dd class="card__term product-descr">500 г</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Вкус</dt>
-              <dd class="card__descr product-descr">Гречка</dd>
+              <dd class="card__term product-descr">Гречка</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Цена</dt>
-              <dd class="card__descr product-descr">400 ₽</dd>
+              <dd class="card__term product-descr">400 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
           <li class="product__item card">
-            <img class="card__image" src="#" alt="Фото товара">
+            <div class="card__image-block">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/buckwheat-1000-tablet.png 1x, ./img/catalog/buckwheat-1000-tablet@2x.png 2x">
+                <img class="card__image" src="./img/catalog/buckwheat-1000.png" srcset="./img/catalog/buckwheat-1000@2x.png 2x" alt="Cat Energy SLIM 1000 г">
+              </picture>
+            </div>
+            <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy SLIM 1000 г</a>
             <dl class="card__list">
               <div class="card__line">
               <dt class="card__term product-descr">Масса</dt>
-              <dd class="card__descr product-descr">1000 г</dd>
+              <dd class="card__term product-descr">1000 г</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Вкус</dt>
-              <dd class="card__descr product-descr">Гречка</dd>
+              <dd class="card__term product-descr">Гречка</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Цена</dt>
-              <dd class="card__descr product-descr">700 ₽</dd>
+              <dd class="card__term product-descr">700 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
           <li class="product__item card">
-            <img class="card__image" src="#" alt="Фото товара">
+            <div class="card__image-block">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/rice-500-tablet.png 1x, ./img/catalog/rice-500-tablet@2x.png 2x">
+                <img class="card__image" src="./img/catalog/rice-500.png" srcset="./img/catalog/rice-500@2x.png 2x" alt="Cat Energy SLIM 500 г">
+              </picture>
+            </div>
+            <div class="card__text-block">
             <a href="#" class="card__title">Cat Energy SLIM 500 г</a>
             <dl class="card__list">
               <div class="card__line">
               <dt class="card__term product-descr">Масса</dt>
-              <dd class="card__descr product-descr">500 г</dd>
+              <dd class="card__term product-descr">500 г</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Вкус</dt>
-              <dd class="card__descr product-descr">Рис</dd>
+              <dd class="card__term product-descr">Рис</dd>
             </div>
             <div class="card__line">
               <dt class="card__term product-descr">Цена</dt>
-              <dd class="card__descr product-descr">500 ₽</dd>
+              <dd class="card__term product-descr">500 ₽</dd>
             </dl>
           </div>
+        </div>
             <a class="card__button button" href="#">Заказать</a>
           </li>
-          <li class="product__item card product-card--last">
-            <a href="#" class="card__title">Показать еще 100500 товаров</a>
-            <p class="card__descr"></p>
-            <a class="card__button button" href="#">Показать все</a>
+          <li class="product__item card card--last">
+            <h3 class="card__title card__title--last">Показать еще 100500 товаров</h3>
+            <p class="card__term card__term--last">На самом деле вкусов гораздо больше!</p>
+            <a class="card__button card__button--last" href="#">Показать все</a>
           </li>
         </ul>
-
     </section>
     <section class="additional">
-      <h2 class="additional__title catalog-title">Дополнительные товары</h2>
+      <h2 class="additional__title special-title">
+        <div class="special-title__container">
+        <span class="special-title__text additional__text">Дополнительные товары</span>
+      </div>
+      </h2>
+      <div class="additional__wrapper">
       <ul class="additional__list">
-        <li class="additional__item additional-card">
-          <h3 class="additional__title">Сахарозаменитель</h3>
-          <span class="additional__descr">1 упаковка (100 г)</span>
-          <span class="additional__descr">200 ₽</span>
-          <a class="additional__button button" href="#">Заказать</a>
+        <li class="additional__item add-card">
+          <h3 class="add-card__title">Сахарозаменитель</h3>
+          <span class="add-card__descr">1 упаковка (100 г)</span>
+          <span class="add-card__descr add-card__text">200 ₽</span>
+          <a class="add-card__button button" href="#">Заказать</a>
         </li>
-        <li class="additional__item additional-card">
-          <h3 class="additional__title">Питьевая вода</h3>
-          <span class="additional__descr">5 литров</span>
-          <span class="additional__descr">50 ₽</span>
-          <a class="additional__button button" href="#">Заказать</a>
+        <li class="additional__item add-card">
+          <h3 class="add-card__title">Питьевая вода</h3>
+          <span class="add-card__descr">5 литров</span>
+          <span class="add-card__descr add-card__text">50 ₽</span>
+          <a class="add-card__button button" href="#">Заказать</a>
         </li>
-        <li class="additional__item additional-card">
-          <h3 class="additional__title">Молоко</h3>
-          <span class="additional__descr">1 литр</span>
-          <span class="additional__descr">100 ₽</span>
-          <a class="additional__button button" href="#">Заказать</a>
+        <li class="additional__item add-card">
+          <h3 class="add-card__title">Молоко</h3>
+          <span class="add-card__descr">1 литр</span>
+          <span class="add-card__descr add-card__text">100 ₽</span>
+          <a class="add-card__button button" href="#">Заказать</a>
         </li>
-        <li class="additional__item additional-card">
-          <h3 class="additional__title">Витамины</h3>
-          <span class="additional__descr">1 упаковка (30 г)</span>
-          <span class="additional__descr">300 ₽</span>
-          <a class="additional__button button" href="#">Заказать</a>
-        </li>
-        <li class="additional__item additional-card additional-card--last">
-          <a class="additional-button" href="#">
-          Закажите все и получите чехол для кота в подарок!
-          </a>
+        <li class="additional__item add-card">
+          <h3 class="add-card__title">Витамины</h3>
+          <span class="add-card__descr">1 упаковка (30 г)</span>
+          <span class="add-card__descr add-card__text">300 ₽</span>
+          <a class="add-card__button button" href="#">Заказать</a>
         </li>
       </ul>
-    </section>
+      <div class="additional__container">
+          <a class="additional__link" href="#">
+          <span class="additional__text-line">Закажите все<br>и получите чехол для кота в подарок!</span>
+          </a>
+      </div>
+    </div>
+      </section>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper">
-        <section class="invite">
-          <div class="invite__wrapper">
-            <h2 class="invite__title card-title">Приглашаем к сотрудничеству дилеров!</h2>
-            <address class="invite__address card-descr">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-          </div>
-          <a class="invite__link" href="#">
-          <img src="./img/location.jpg" width="320" height="362" alt="Местоположение на карте">
-          </a>
-        </section>
-        <div class="main-footer__logo logo logo--bottom">
-          <a class="logo__subscribe" href="#"><img src="./img/logo-subscribe.svg" width="128" height="24" alt="Название логотипа"></a>
+      <section class="invite">
+        <div class="invite__wrapper">
+          <h2 class="invite__title">Приглашаем<br>к сотрудничеству дилеров!</h2>
+          <address class="invite__address card-descr">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         </div>
-        <ul class="main-footer__list social">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-            <span class="visually-hidden">Мы в ВКонтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">
-            <span class="visually-hidden">Мы в Ютубе</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="#">
-            <span class="visually-hidden">Мы в Телеграме</span>
-            </a>
-          </li>
-        </ul>
+        <a class="invite__link" href="#">
+          <img class="invite__image" src="./img/location.jpg" min-width="320" height="362"
+            alt="Местоположение на карте">
+        </a>
+      </section>
+      <div class="main-footer__wrapper">
+        <div class="main-footer__logo logo">
+          <a class="logo__subscribe" href="#"><img src="./img/logo-subscribe.svg" width="128" height="24"
+              alt="Название логотипа"></a>
+        </div>
+        <div class="main-footer__container">
+          <ul class="main-footer__list social">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="#">
+                <span class="visually-hidden">Мы в ВКонтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="#">
+                <span class="visually-hidden">Мы в Ютубе</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="#">
+                <span class="visually-hidden">Мы в Телеграме</span>
+              </a>
+            </li>
+          </ul>
+        </div>
         <div class="main-footer__copyright">
           <a class="main-footer__copyright-descr" href="#">
-          <img src="./img/footer-descr.svg" width="113" height="19"  alt="Копирайт подпись">
+            <img src="./img/footer-descr.svg" width="113" height="19" alt="Копирайт подпись">
           </a>
-          <a class="main-footer__cooyright-image" href="#">
-          <img src="./img/footer-icon.svg" width="27" height="34" alt="Копирайт иконка">
+          <a class="main-footer__copyright-image" href="#">
+            <img src="./img/footer-icon.svg" width="27" height="34" alt="Копирайт иконка">
           </a>
         </div>
       </div>
