--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
           <img class="logo__image" src="./img/logo-mobile.svg" alt="Иконка логотипа">
           </picture>
         </a>
-      <nav class="main-header__nav main-nav main-nav--closed">
+      <nav class="main-header__nav main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
