--- a/source/catalog.html
+++ b/source/catalog.html
@@ -277,15 +277,25 @@
       </section>
     </main>
     <footer class="main-footer">
-      <section class="invite">
+      <section class="invite invite--theme">
         <div class="invite__wrapper">
           <h2 class="invite__title">Приглашаем<br>к сотрудничеству дилеров!</h2>
-          <address class="invite__address card-descr">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+          <address class="invite__address">ул. Большая Конюшенная, д. 19/8
+            <span class="invite__address-span">Санкт-Петербург</span>
+          </address>
         </div>
-        <a class="invite__link" href="#">
-          <img class="invite__image" src="./img/location.jpg" min-width="320" height="362"
-            alt="Местоположение на карте">
-        </a>
+        <div class="invite__map map">
+          <div class="map__google-container">
+            <iframe class="map__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197886!2d30.320472476878738!3d59.93871916209405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1693304454202!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+          <div class="map__image-container">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="./img/location-desktop.jpg 1x, ./img/location-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="./img/location-tablet.jpg 1x, ./img/location-tablet@2x.jpg 2x">
+              <img class="map__image" src="./img/location.jpg" srcset="./img/location@2x.jpg 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+            </picture>
+          </div>
+        </div>
       </section>
       <div class="main-footer__wrapper">
         <div class="main-footer__logo logo">
