--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" sizes="16x16" href="./img/favicons/favicon-16.png" type="image/x-icon">
+  <link rel="icon" sizes="32x32" href="./img/favicons/favicon-32.png" type="image/x-icon">
+  <link rel="icon" sizes="152x152" href="./img/favicons/favicon-152.png" type="image/x-icon">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -139,6 +143,9 @@
               </li>
             </ul>
             <button class="slider__button" type="button">
+              <svg class="slider__icon" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <use href="./img/sprite.svg#thumb"></use>
+                </svg>
               <span class="visually-hidden">Шторка для переключения изображения котов</span>
             </button>
           </div>
@@ -158,7 +165,7 @@
         <div class="map__google-container">
           <iframe class="map__google-map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036257197886!2d30.320472476878738!3d59.93871916209405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1693304454202!5m2!1sru!2sru"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            width="600" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="map__image-container">
