--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,10 +8,12 @@
   <link rel="icon" sizes="16x16" href="./img/favicons/favicon-16.png" type="image/x-icon">
   <link rel="icon" sizes="32x32" href="./img/favicons/favicon-32.png" type="image/x-icon">
   <link rel="icon" sizes="152x152" href="./img/favicons/favicon-152.png" type="image/x-icon">
-  <link rel="preload" href="fonts/oswaldregular.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/oswaldmedium.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="fonts/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/lato/Lato-Regular.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/lato/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldmedium.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldregular.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <title>Catalog Cat Energy</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -26,7 +28,7 @@
           <img class="logo__image" src="./img/logo-mobile.svg" alt="Иконка логотипа">
         </picture>
       </a>
-      <nav class="main-header__nav main-nav main-nav--closed">
+      <nav class="main-header__nav main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
