--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" sizes="16x16" href="./img/favicons/favicon-16.png" type="image/x-icon">
   <link rel="icon" sizes="32x32" href="./img/favicons/favicon-32.png" type="image/x-icon">
   <link rel="icon" sizes="152x152" href="./img/favicons/favicon-152.png" type="image/x-icon">
+  <link rel="preload" href="./fonts/lato/Lato-Regular.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/lato/Lato-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldmedium.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldregular.woff" as="font" type="font/woff" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/oswald/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
